# locallens_mcp_agent

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  LICENSE.md  NOTICE.md  README.md  TESTING.md  build_tray_mac.sh  build_tray_win.bat  claude_desktop_config.example.json  fix_locallens_agent.command  installer_win.nsi  locallens-mcp.spec  locallens-tray-win.spec  locallens_mcp_entrypoint.py  locallens_tray_entrypoint.py  pyproject.toml  release_notes_template.md  release_notes_v1.0.12.md  release_notes_v1.0.16.md  release_notes_v1.0.18.md  release_notes_v1.0.19.md  requirements.txt  set_version.js  setup_tray_mac.py  version.json
.agents/: AGENTS.md
.agents/skills/release-agent/: SKILL.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-check.yml  release.yml
icons/Locallens/: icon.icns
icons/ll_black/: icon.icns
icons/ll_blue/: icon.icns
icons/ll_red/: icon.icns
src/: chat_ui.py
src/llm_connector/: __init__.py  ollama_connector.py  tool_registry.py
src/mcp_server/: __init__.py  claude_connector.py  config.py  license.py  main.py  updater.py
src/mcp_server/tools/: actions.py  pro_tools.py  queries.py  status.py
src/tray/: __init__.py  actions.py  main.py  status.py  tray_mac.py  tray_win.py
tests/: test_claude_connector.py
